# swagger/test.json
@@ -20,7 +20,7 @@
     "http"
   ],
   "paths": {
-    "/user": {
+    "/users": {
       "post": {
         "tags": [
           "user"
@@ -43,11 +43,11 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "successful operation"
+          "201": {
+            "description": "成功地操作"
           },
           "400": {
-            "description": "Invalid data supplied"
+            "description": "提供的資料有誤"
           }
         }
       },
@@ -73,7 +73,7 @@
             }
           },
           "400": {
-            "description": "Invalid username supplied"
+            "description": ""
           },
           "404": {
             "description": "User not found"
@@ -81,24 +81,24 @@
         }
       }
     },
-    "/user/{username}": {
+    "/users/{id}": {
       "get": {
         "tags": [
           "user"
         ],
-        "summary": "Get user by user name",
+        "summary": "Get user by user id",
         "description": "",
-        "operationId": "getUserByName",
+        "operationId": "getUserById",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "username",
+            "name": "id",
             "in": "path",
-            "description": "The name that needs to be fetched.",
+            "description": "The id that needs to be fetched.",
             "required": true,
-            "type": "string"
+            "type": "number"
           }
         ],
         "responses": {
@@ -109,7 +109,7 @@
             }
           },
           "400": {
-            "description": "Invalid username supplied"
+            "description": ""
           },
           "404": {
             "description": "User not found"
@@ -128,11 +128,11 @@
         ],
         "parameters": [
           {
-            "name": "username",
+            "name": "id",
             "in": "path",
-            "description": "name that need to be updated",
+            "description": "id that need to be updated",
             "required": true,
-            "type": "string"
+            "type": "number"
           },
           {
             "in": "body",
@@ -145,11 +145,14 @@
           }
         ],
         "responses": {
+          "201": {
+            "description": "成功地更新"
+          },
           "400": {
-            "description": "Invalid user supplied"
+            "description": "提供的資料有誤"
           },
           "404": {
-            "description": "User not found"
+            "description": "找不到使用者"
           }
         }
       },
@@ -165,19 +168,22 @@
         ],
         "parameters": [
           {
-            "name": "username",
+            "name": "id",
             "in": "path",
-            "description": "The name that needs to be deleted",
+            "description": "The id that needs to be deleted",
             "required": true,
-            "type": "string"
+            "type": "number"
           }
         ],
         "responses": {
           "400": {
-            "description": "Invalid username supplied"
+            "description": ""
           },
           "404": {
             "description": "User not found"
+          },
+          "200":{
+            "description": "successful operation"
           }
         }
       }
@@ -262,7 +268,7 @@
           "type": "string"
         },
         "userStatus": {
-          "type": "integer",
+          "type": "string",
           "description": "User Status"
         }
       }
